refactor(bake): 优化烘焙任务的状态记录和回滚机制
- 使用 LinkedHashMap 替代 List 存储位置状态，确保插入顺序和唯一性
- 实现每位置事务语义，相同坐标的重复写入只记录首次状态
- 重写回滚逻辑以支持后进先出(LIFO)的顺序恢复
- 更新进度计算和剩余数量统计方法
- 添加游戏测试验证重复位置的回滚行为
- 重构 undo 记录的数据结构和访问方式